LayoutTable::BottomSection() should return the last rendered table section

Bug: 764525
Change-Id: I5b784dbd64c96269bca19d12f71c138bd13a32b4
Reviewed-on: https://chromium-review.googlesource.com/670339
Commit-Queue: Robert Hogan <robhogan@gmail.com>
Reviewed-by: Morten Stenshorne <mstensho@opera.com>
Cr-Commit-Position: refs/heads/master@{#502681}
Former-commit-id: 9c14979722d3761c5449f3ef9f68bd2fee4f82a0