third_party/WebKit/Source/core/layout/LayoutTable.cpp
@@ -1327,8 +1327,13 @@ LayoutTableSection* LayoutTable::BottomSection() const {
   if (foot_)
     return foot_;
 
+  if (head_ && !first_body_)
+    return head_;
+
   for (LayoutObject* child = LastChild(); child;
        child = child->PreviousSibling()) {
+    if (child == head_)
+      continue;
     if (child->IsTableSection())
       return ToLayoutTableSection(child);
   }
@@ -1672,8 +1677,6 @@ void LayoutTable::UpdateCollapsedOuterBorders() const {
 
   // The table's after outer border width is the maximum after outer border
   // widths of all cells in the last row. See the CSS 2.1 spec, section 17.6.2.
-  // TODO(crbug.com/764525): Because of the bug, bottom_section can be null when
-  // top_section is not null. See LayoutTableTest.OutOfOrderHeadAndBody.
   if (const auto* bottom_section = BottomNonEmptySection()) {
     unsigned row = bottom_section->NumRows() - 1;
     unsigned bottom_cols = bottom_section->NumCols(row);
